chore: utils updates